force-app/main/default/objects/Fight_Schedule__c/Fight_Schedule__c.object-meta.xml
<CustomObject>
    <label>Flight Schedule</label>
    <nameField>
        <displayFormat>FS - {0000}</displayFormat>
        <label>Fight Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>