force-app/main/default/objects/Fight_Schedule__c/fields/Depature_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Depature_Date_Time__c</fullName>
    <label>Depature Date Time</label>
    <type>DateTime</type>
</CustomField>