force-app/main/default/objects/Fight_Schedule__c/fields/Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Name__c</fullName>
    <label>Destination Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Trivandram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>