force-app/main/default/objects/Fight_Schedule__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(FLOOR(( Depature_Date_Time__c  -  Arrival_Date_Time__c ) / 3600)) &amp; &quot; Hours : &quot; &amp; 
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD(( Depature_Date_Time__c  -  Arrival_Date_Time__c ), 3600) / 60)), 2) &amp; &quot; min &quot; &amp; 
RIGHT(&quot;0&quot; &amp; TEXT(MOD(( Depature_Date_Time__c  -  Arrival_Date_Time__c ), 60)), 2) &amp; &quot; Seconds&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>