force-app/main/default/objects/Fight_Schedule__c/fields/Name_of_the_First_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_First_Pilot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of the First Pilot</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>