force-app/main/default/objects/Fight_Schedule__c/fields/Name_of_the_Second_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Second_Pilot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of the Second Pilot</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Flight Schedules (Name of the Second Pilot)</relationshipLabel>
    <relationshipName>Flight_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>