force-app/main/default/objects/Fight_Schedule__c/fields/Select_Flight__c.field-meta.xml
<CustomField>
    <fullName>Select_Flight__c</fullName>
    <label>Select Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>